# snake-duel

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  issues.md  openapi.yaml  package.json
backend/: auth.py  main.py  models.py  pyproject.toml  store.py
backend/app/: auth.py  database.py  main.py  models.py  security.py  store.py
backend/app/routers/: auth.py  games.py  scores.py
backend/routers/: auth_router.py  games_router.py  scores_router.py
backend/tests/: conftest.py  test_auth.py  test_games.py  test_scores.py
backend/tests_integration/: conftest.py  test_full_flow.py
frontend/: package-lock.json  vite.config.ts  vitest.config.ts
frontend/src/: routeTree.gen.ts  styles.css
frontend/src/components/: AppHeader.tsx  SnakeBoard.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useTheme.ts
frontend/src/lib/: snake.test.ts  snake.ts
llmwiki/: index.md
llmwiki/apis/: backend-rest-api.md
llmwiki/decisions/: active-game-id-ownership.md  api-service-interface.md  backend-module-structure.md  in-memory-store.md  subscribe-pattern.md  theme-system.md
llmwiki/gotchas/: bun-not-installed.md  codespaces-api-proxy.md  passlib-bcrypt-compat.md  ssr-hydration-theme-mismatch.md  stale-closure-death-effect.md
llmwiki/integrations/: auth-token-flow.md
llmwiki/schemas/: frontend-types.md
src/: routeTree.gen.ts
src/components/: AppHeader.tsx  SnakeBoard.tsx
src/contexts/: AuthContext.tsx
src/lib/: snake.ts
src/routes/: index.tsx  leaderboard.tsx  watch.tsx
src/services/: api.ts  mockApi.ts
(+14 files in other folders)
