[project]
name = "backend"
version = "0.1.0"
description = "Snake Arena FastAPI backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "bcrypt>=4.0.0",
    "sqlalchemy>=2.0.51",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.27.0",
    "pytest-anyio>=0.0.0",
    "anyio[trio]>=4.0.0",
]

[dependency-groups]
dev = [
    "anyio>=4.14.0",
    "httpx>=0.28.1",
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
anyio_mode = "auto"
